Revert "Feature/dolly backend reactive (#3914)"
This reverts commit 48097a8fca29f311891e50a48258916a70deeb6d.