@@ -1,23 +1,10 @@
 package no.nav.dolly.bestilling.arenaforvalter;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.AllArgsConstructor;
-import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.dolly.bestilling.ConsumerStatus;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaForvalterDeleteCommand;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaForvalterGetMiljoeCommand;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaGetCommand;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostAap;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostAap115;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostArenaBruker;
-import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostArenadagpenger;
-import no.nav.dolly.bestilling.arenaforvalter.dto.Aap115Request;
-import no.nav.dolly.bestilling.arenaforvalter.dto.Aap115Response;
-import no.nav.dolly.bestilling.arenaforvalter.dto.AapRequest;
-import no.nav.dolly.bestilling.arenaforvalter.dto.AapResponse;
-import no.nav.dolly.bestilling.arenaforvalter.dto.ArenaResponse;
-import no.nav.dolly.bestilling.arenaforvalter.dto.ArenaStatusResponse;
+import no.nav.dolly.bestilling.arenaforvalter.command.*;
+import no.nav.dolly.bestilling.arenaforvalter.dto.*;
 import no.nav.dolly.config.Consumers;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaDagpenger;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
@@ -43,16 +30,16 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
 
     private final WebClient webClient;
     private final ServerProperties serverProperties;
-    private final TokenExchange tokenExchange;
+    private final TokenExchange tokenService;
 
     public ArenaForvalterConsumer(
             Consumers consumers,
-            TokenExchange tokenExchange,
+            TokenExchange tokenService,
             ObjectMapper objectMapper,
-            WebClient webClient) {
-
+            WebClient webClient
+    ) {
         serverProperties = consumers.getTestnavArenaForvalterenProxy();
-        this.tokenExchange = tokenExchange;
+        this.tokenService = tokenService;
         this.webClient = webClient
                 .mutate()
                 .baseUrl(serverProperties.getUrl())
@@ -63,7 +50,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_deleteIdent"})
     public Flux<ArenaResponse> deleteIdenter(List<String> identer) {
 
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaForvalterGetMiljoeCommand(webClient, token.getTokenValue()).call()
                         .flatMap(miljoe -> Flux.fromIterable(identer)
                                 .delayElements(Duration.ofMillis(100))
@@ -74,7 +61,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_deleteIdent"})
     public Mono<ArenaResponse> inaktiverBruker(String ident, LocalDate stansdato, String miljoe) {
 
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMap(token -> new ArenaForvalterDeleteCommand(webClient, ident, stansdato, miljoe, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Inaktivert bruker {} mot Arenaforvalter {}", ident, response)));
     }
@@ -83,17 +70,17 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<ArenaNyeBrukereResponse> postArenaBruker(ArenaNyeBrukere arenaNyeBrukere) {
 
         log.info("Arena opprett bruker {}", arenaNyeBrukere);
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostArenaBruker(webClient, arenaNyeBrukere, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet bruker {} mot Arenaforvalter {}",
-                                arenaNyeBrukere.getNyeBrukere().getFirst().getPersonident(), response)));
+                                arenaNyeBrukere.getNyeBrukere().get(0).getPersonident(), response)));
     }
 
     @Timed(name = "providers", tags = {"operation", "arena_postAap"})
     public Flux<AapResponse> postAap(AapRequest aapRequest) {
 
         log.info("Arena opprett Aap {}", aapRequest);
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostAap(webClient, aapRequest, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet aap {} mot Arenaforvalter {}",
                                 aapRequest.getPersonident(), response)));
@@ -103,7 +90,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<Aap115Response> postAap115(Aap115Request aap115Request) {
 
         log.info("Arena opprett Aap115 {}", aap115Request);
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostAap115(webClient, aap115Request, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet aap115 {} mot Arenaforvalter {}",
                                 aap115Request.getPersonident(), response)));
@@ -113,7 +100,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<ArenaNyeDagpengerResponse> postArenaDagpenger(ArenaDagpenger arenaDagpenger) {
 
         log.info("Opprett dagpenger mot Arenaforvalter {}", arenaDagpenger);
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostArenadagpenger(webClient, arenaDagpenger, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet dagpenger for {} mot Arenaforvalter {}",
                                 arenaDagpenger.getPersonident(), response)));
@@ -122,14 +109,14 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_getEnvironments"})
     public Flux<String> getEnvironments() {
 
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaForvalterGetMiljoeCommand(webClient, token.getTokenValue()).call());
     }
 
     @Timed(name = "providers", tags = {"operation", "arena_getEnvironments"})
     public Mono<ArenaStatusResponse> getArenaBruker(String ident, String miljoe) {
 
-        return tokenExchange.exchange(serverProperties)
+        return tokenService.exchange(serverProperties)
                 .flatMap(token -> new ArenaGetCommand(webClient, ident, miljoe, token.getTokenValue()).call())
                 .doOnNext(response -> log.info("Hentet bruker {} fra Arena miljoe {} {}", ident, miljoe, response));
     }
