@@ -3,6 +3,7 @@ package no.nav.dolly.bestilling.sigrunstub;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import ma.glasnost.orika.MapperFacade;
+import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubLignetInntektRequest;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubPensjonsgivendeInntektRequest;
@@ -14,11 +15,10 @@ import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
 import no.nav.dolly.mapper.MappingContextUtils;
-import no.nav.dolly.service.TransactionHelperService;
+import no.nav.dolly.util.TransactionHelperService;
 import org.reactivestreams.Publisher;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -38,18 +38,17 @@ public class SigrunStubClient implements ClientRegister {
     private final TransactionHelperService transactionHelperService;
 
     @Override
-    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        return Flux.merge(
+        return Flux.from(Flux.merge(
                         doLignetInntekt(bestilling, dollyPerson),
                         doPensjonsgivendeInntekt(bestilling, dollyPerson),
                         doSummertSkattegrunnlag(bestilling, dollyPerson))
                 .collect(Collectors.joining(","))
-                .flatMap(resultat -> oppdaterStatus(progress, resultat));
+                .map(resultat -> futurePersist(progress, resultat)));
     }
 
     private Publisher<String> doSummertSkattegrunnlag(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
-
         return Flux.just(bestilling)
                 .filter(bestilling1 -> !bestilling1.getSigrunstubSummertSkattegrunnlag().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstubSummertSkattegrunnlag)
@@ -70,7 +69,6 @@ public class SigrunStubClient implements ClientRegister {
     }
 
     private Flux<String> doPensjonsgivendeInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
-
         return Flux.just(bestilling)
                 .filter(bestilling2 -> !bestilling2.getSigrunstubPensjonsgivende().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstubPensjonsgivende)
@@ -89,7 +87,6 @@ public class SigrunStubClient implements ClientRegister {
     }
 
     private Flux<String> doLignetInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
-
         return Flux.just(bestilling)
                 .filter(bestilling1 -> !bestilling1.getSigrunstub().isEmpty())
                 .map(RsDollyUtvidetBestilling::getSigrunstub)
@@ -107,9 +104,12 @@ public class SigrunStubClient implements ClientRegister {
                 });
     }
 
-    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
+    private ClientFuture futurePersist(BestillingProgress progress, String status) {
 
-        return transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
+        return () -> {
+            transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
+            return progress;
+        };
     }
 
     @Override
@@ -143,11 +143,10 @@ public class SigrunStubClient implements ClientRegister {
 
         return tilbakemeldinger.stream()
                 .allMatch(SigrunstubResponse.OpprettelseTilbakemelding::isOK) ? "OK" :
-                ErrorStatusDecoder.encodeStatus("Feil: %s".formatted(
+                ErrorStatusDecoder.encodeStatus(String.format("Feil: %s",
                         tilbakemeldinger.stream()
                                 .filter(SigrunstubResponse.OpprettelseTilbakemelding::isError)
-                                .map(status -> "Inntektsår: %s, feilmelding: %s".formatted(
-                                        status.getInntektsaar(), status.getMessage()))
+                                .map(status -> String.format("Inntektsår: %s, feilmelding: %s", status.getInntektsaar(), status.getMessage()))
                                 .collect(Collectors.joining(", "))));
     }
 }
